# parsely

./: CHANGELOG.md  Cargo.toml  Notes.md  README.md
.github/workflows/: rust.yml
impl/: CHANGELOG.md  Cargo.toml
impl/src/: code_gen.rs  error.rs  lib.rs  model_types.rs  parsely_read.rs  parsely_write.rs  syn_helpers.rs
impl/src/code_gen/: gen_read.rs  gen_write.rs  helpers.rs  mod.rs  parsely_common_field_data.rs
impl/src/code_gen/read/: helpers.rs  mod.rs  parsely_read_enum_data.rs  parsely_read_field_data.rs  parsely_read_struct_data.rs  parsely_read_variant_data.rs
impl/src/code_gen/write/: helpers.rs  mod.rs  parsely_write_enum_data.rs  parsely_write_field_data.rs  parsely_write_struct_data.rs  parsely_write_variant_data.rs
impl/src/parsely_data/: mod.rs  parsely_common_field_data.rs  parsely_read_enum_data.rs  parsely_read_field_data.rs  parsely_read_struct_data.rs  parsely_read_variant_data.rs
impl/src/parsely_data/read/: mod.rs  parsely_read_enum_data.rs  parsely_read_field_data.rs
macro/: CHANGELOG.md  Cargo.toml
macro/src/: lib.rs
src/: lib.rs
tests/: ui.rs
tests/expand/: alignment.expanded.rs  alignment.rs  assertion.expanded.rs  assertion.rs  enum_basic.expanded.rs  enum_basic.rs  map.expanded.rs  map.rs  read_context.expanded.rs  read_context.rs
tests/ui/pass/: alignment.rs  basic.rs  basic_read.rs  basic_write.rs  buffer_type.rs  context.rs  count.rs  enum_basic.rs  fixed.rs  map.rs  newtype_struct.rs  read_context.rs  sync.rs  tuple_struct.rs  when.rs  while.rs
