[package]
name = "parsely-rs"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Macro-based struct serialization/deserialization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsely-macro = { version = "=0.1.4", path = "macro" }
parsely-impl = { version = "=0.4.1", path = "impl" }

[dev-dependencies]
trybuild = "1"
bitvec = "1.0.1"
macrotest = "1"

[[test]]
name = "trybuild"
path = "tests/ui.rs"

[workspace]
members = [".", "impl", "macro"]
default-members = [".", "impl"]
