[package]
name = "parsely-macro"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Macro-based struct serialization/deserialization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
parsely-impl = { version = "=0.3.0", path = "../impl" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
